--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"> <!--Bootstrap CDN-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"> <!--Bootstrap Javascript-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!--Social Media Icons-->
         <link rel="stylesheet" href="CSS/styles.css">
 
         
@@ -34,9 +35,14 @@
 
         </main>
 
-        <footer>
-
-        </footer>
+        <footer class="bg-dark card-footer footer">
+            <div class="media-links">
+                <a href="#"><i class="fa fa-lg fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-lg fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-lg fa-github"></i></a>
+                <a href="#"><i class="fa fa-lg fa-google-plus"></i></a>
+            </div>
+          </footer>
 
     </body>
 </html>
