--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 
         </header>
 
-        <main>
+        <main class="main-body">
+            <div class="card-title">
+              <h1 class="text-center"> Quiz </h1>
+              <h2 class="text-center"> How to Play </h2>
+            </div>
 
         </main>
 
