--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Home</title>
+        <title>Quiz</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"> <!--Bootstrap CDN-->
@@ -20,10 +20,10 @@
             <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
                 <ul class="navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link active" href="index.html">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="quiz.html">Quiz</a>
+                    <a class="nav-link active" href="quiz.html">Quiz</a>
                   </li>
                 </ul>
               </nav>
@@ -32,10 +32,7 @@
         </header>
 
         <main class="main-body">
-            <div class="card-title">
-              <h1 class="text-center"> Quiz </h1>
-              <h2 class="text-center"> How to Play </h2>
-            </div>
+
 
         </main>
 
