added link for the github icon in the footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"> <!--Bootstrap CDN-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"> <!--Bootstrap Javascript-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!--Social Media Icons-->
         <link rel="stylesheet" href="CSS/styles.css">
 
@@ -35,6 +34,12 @@
             <div class="card-title">
               <h1 class="text-center"> Quiz </h1>
               <h2 class="text-center"> How to Play </h2>
+              <p class="text-center">
+                In this quiz you will have 5 questions that you have to answer, click on the answer that you think is correct after reading the question but be careful as you only have one chance on each quesiton. After completing all 5 questions you will be told how many you have answered correctly.
+              </p>
+              <div class="text-center">
+                <button class="play-now"><a href="quiz.html"> Play Now </a></button>
+              </div>
             </div>
 
         </main>
@@ -43,10 +48,10 @@
             <div class="media-links">
                 <a href="#"><i class="fa fa-lg fa-facebook"></i></a>
                 <a href="#"><i class="fa fa-lg fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-lg fa-github"></i></a>
+                <a href="https://github.com/MahimC11/Assignment-2"><i class="fa fa-lg fa-github"></i></a>
                 <a href="#"><i class="fa fa-lg fa-google-plus"></i></a>
             </div>
           </footer>
-
+          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"> <!--Bootstrap Javascript-->
     </body>
 </html>
