--- a/quiz.html
+++ b/quiz.html
@@ -56,7 +56,7 @@
             <div class="media-links">
                 <a href="#"><i class="fa fa-lg fa-facebook"></i></a>
                 <a href="#"><i class="fa fa-lg fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-lg fa-github"></i></a>
+                <a href="https://github.com/MahimC11/Assignment-2"><i class="fa fa-lg fa-github"></i></a>
                 <a href="#"><i class="fa fa-lg fa-google-plus"></i></a>
             </div>
           </footer>
