changed the quiz

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <h1 class="text-center"> Quiz </h1>
               <h2 class="text-center"> How to Play </h2>
               <p class="text-center">
-                In this quiz you will have 5 questions that you have to answer, click on the answer that you think is correct after reading the question but be careful as you only have one chance on each quesiton. After completing all 5 questions you will be told how many you have answered correctly.
+                In this quiz you have 5 Questions to answer. If you feel that you want to go back and change an answer you can press the 'previous button' in order to go back one question. At the end you will be given a score.
               </p>
               <div class="text-center">
                 <button class="play-now"><a href="quiz.html"> Play Now </a></button>
