--- a/quiz.html
+++ b/quiz.html
@@ -80,6 +80,6 @@
             </div>
           </footer>
 
-          <script src="TEST.js"></script>
+          <script src="questions.js"></script>
     </body>
 </html>
